<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/utapp_fondogeneral"
    tools:context=".Socios">

    <ImageView
        android:id="@+id/iv_fotoSocio"
        android:layout_width="@dimen/utapp_tamanoimagencuadrada"
        android:layout_height="@dimen/utapp_tamanoimagencuadrada"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/utahapp_iwfotosocio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_club" />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="475dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="168dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/utahapp_numerosocio"
                android:inputType="number"
                android:textSize="@dimen/utapp_tamanohint"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nombreSocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/utahapp_nombre"
                android:inputType="textPersonName"
                android:textSize="@dimen/utapp_tamanohint"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_apellidosSocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/utahapp_apellidos"
                android:inputType="textPersonName"
                android:textSize="@dimen/utapp_tamanohint"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nifSocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/utahapp_nif"
                android:inputType="textPersonName"
                android:textSize="@dimen/utapp_tamanohint"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>